--- a/WebClient/Views/Accounts/Login.cshtml
+++ b/WebClient/Views/Accounts/Login.cshtml
@@ -21,7 +21,7 @@
 <body class="bg-silver-300">
     <div class="content">
         <div class="brand">
-            <a class="link" href="index.html">Job Registration Submission</a>
+            <a class="link" href="/joblists">Job Registration Submission</a>
         </div>
         <form id="login-form" action="javascript:;" method="post">
             <h2 class="login-title">Log in</h2>
