Send email confirm

--- a/WebClient/Views/Accounts/Login.cshtml
+++ b/WebClient/Views/Accounts/Login.cshtml
@@ -49,7 +49,7 @@
             </div>
             <div class="text-center">
                 Not a member?
-                <a class="color-blue" href="/register">Create accaunt</a>
+                <a class="color-blue" href="/register">Create account</a>
             </div>
         </form>
     </div>
