--- a/WebClient/Views/Accounts/Register.cshtml
+++ b/WebClient/Views/Accounts/Register.cshtml
@@ -9,7 +9,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
-    <title>Admincast bootstrap 4 &amp; angular 5 admin template, Шаблон админки | Register</title>
+    <title>Register Page</title>
     <!-- GLOBAL MAINLY STYLES-->
     <link href="~/html/dist/assets//vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/html/dist/assets//vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" id="joblist" value="@Context.Session.GetInt32("joblist")" hidden>
+                <input class="form-control" type="text" id="joblist" value="@Context.Session.GetInt32("joblists")" hidden>
             </div>
             <div class="form-group">
                 <input class="form-control" type="email" id="Email" placeholder="Email" autocomplete="off">
