--- a/WebClient/Views/Joblists/ListJobs.cshtml
+++ b/WebClient/Views/Joblists/ListJobs.cshtml
@@ -8,19 +8,15 @@
 <div class="content-wrapper">
     <!-- START PAGE CONTENT-->
     <div class="page-heading">
-        <h1 class="page-title">DataTables</h1>
+        <h1 class="page-title">CAREER OPORTUNITIES</h1>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="index.html"><i class="la la-home font-20"></i></a>
             </li>
-            <li class="breadcrumb-item">DataTables</li>
         </ol>
     </div>
     <div class="page-content fade-in-up">
         <div class="ibox">
-            <div class="ibox-head">
-                <div class="ibox-title">Data Table</div>
-            </div>
             <div class="ibox-body">
                 <table class="table table-striped table-bordered table-hover" id="Joblists" cellspacing="0" width="100%">
                     <thead>
@@ -43,5 +39,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/Script/Accounts.js"></script>
+    <script src="~/js/Script/joblist.js"></script>
 }
