--- a/WebClient/Views/Employees/Index.cshtml
+++ b/WebClient/Views/Employees/Index.cshtml
@@ -92,19 +92,18 @@
     <!-- End Modal -->
     <!-- START PAGE CONTENT-->
     <div class="page-heading">
-        <h1 class="page-title">DataTables</h1>
+        <h1 class="page-title">Job Seeker List</h1>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="index.html"><i class="la la-home font-20"></i></a>
             </li>
-            <li class="breadcrumb-item">DataTables</li>
         </ol>
     </div>
     <div class="page-content fade-in-up">
         <div class="ibox">
-            <div class="ibox-head">
+            @*<div class="ibox-head">
                 <div class="ibox-title">Data Table</div>
-            </div>
+            </div>*@
             <div class="ibox-body">
                 <table class="table table-striped table-bordered table-hover" id="Jobseeker" cellspacing="0" width="100%">
                     <thead>
