--- a/WebClient/Views/Joblists/ManageJoblist.cshtml
+++ b/WebClient/Views/Joblists/ManageJoblist.cshtml
@@ -11,7 +11,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header no-bd">
-                    <h5 class="modal-title"><span class="fw-mediumbold">Department</span></h5>
+                    <h5 class="modal-title"><span class="fw-mediumbold">Job List</span></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -22,8 +22,8 @@
                             <input type="text" id="Id" name="Id" class="form-control" hidden>
                             <div class="col-sm-12">
                                 <div class="form-group form-group-default">
-                                    <label>Department Name</label>
-                                    <input type="text" id="Name" name="Name" class="form-control" placeholder="fill Department Name">
+                                    <label>Job Title</label>
+                                    <input type="text" id="Name" name="Name" class="form-control" placeholder="fill Job Title">
                                 </div>
                             </div>
                         </div>
@@ -40,12 +40,11 @@
 
 
     <div class="page-heading">
-        <h1 class="page-title">DataTables</h1>
+        <h1 class="page-title">Manage Job List</h1>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="index.html"><i class="la la-home font-20"></i></a>
             </li>
-            <li class="breadcrumb-item">DataTables</li>
         </ol>
         <div data-toggle="modal" data-target="#myModal" onclick="ClearScreen();">
             <button class="btn btn-outline-success btn-circle" data-toggle="tooltip" data-placement="top" data-animation="false" title="Add">
@@ -55,9 +54,9 @@
     </div>
     <div class="page-content fade-in-up">
         <div class="ibox">
-            <div class="ibox-head">
+            @*<div class="ibox-head">
                 <div class="ibox-title">Data Table</div>
-            </div>
+            </div>*@
             <div class="ibox-body">
                 <table class="table table-striped table-bordered table-hover" id="ManageJoblists" cellspacing="0" width="100%">
                     <thead>
