--- a/WebClient/Views/Layout/_layout.cshtml
+++ b/WebClient/Views/Layout/_layout.cshtml
@@ -30,7 +30,7 @@
         <!-- START HEADER-->
         <header class="header">
             <div class="page-brand">
-                <a class="link" href="index.html">
+                <a class="link" href="/">
                     <span class="brand">
                         JOB
                         <span class="brand-tip">CAST</span>
@@ -57,17 +57,15 @@
                 <!-- START TOP-RIGHT TOOLBAR-->
 
                 <ul class="nav navbar-toolbar">
-                    @if (Context.Session.IsAvailable == true)
+                    @if (level != null)
                     {
                         <li class="dropdown dropdown-user">
                             <a class="nav-link dropdown-toggle link" data-toggle="dropdown" value="Login" onclick="/login">
-                                <img src="./assets/img/admin-avatar.png" />
+                                <img src="~/html/dist/assets/img/admin-avatar.png" />
                                 <span></span>@Context.Session.GetString("uname")<i class="fa fa-angle-down m-l-5"></i>
                             </a>
                             <ul class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="profile.html"><i class="fa fa-user"></i>Profile</a>
-                                <a class="dropdown-item" href="profile.html"><i class="fa fa-cog"></i>Settings</a>
-                                <a class="dropdown-item" href="javascript:;"><i class="fa fa-support"></i>Support</a>
+                                <a class="dropdown-item" href="/profile"><i class="fa fa-user"></i>Profile</a>
                                 <li class="dropdown-divider"></li>
                                 <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i>Logout</a>
                             </ul>
@@ -75,7 +73,7 @@
                     }
 
                 </ul>
-                @if (Context.Session.IsAvailable != true)
+                @if (level == null)
                 {
                     <a href="/login">
                         <button class="btn btn-info btn-block">Login</button>
@@ -90,211 +88,51 @@
         <!-- START SIDEBAR-->
         <nav class="page-sidebar" id="sidebar">
             <div id="sidebar-collapse">
+                
                 <div class="admin-block d-flex">
                     <div>
-                        <img src="./assets/img/admin-avatar.png" width="45px" />
+                        <img src="~/html/dist/assets/img/admin-avatar.png" width="45" />
                     </div>
                     <div class="admin-info">
-                        <div class="font-strong">James Brown</div><small>Administrator</small>
+                        <div class="font-strong">@Context.Session.GetString("uname")</div><small>@Context.Session.GetString("lvl")</small>
                     </div>
                 </div>
+             
                 <ul class="side-menu metismenu">
                     <li>
-                        <a href="index.html">
+                        <a href="/">
                             <i class="sidebar-item-icon fa fa-th-large"></i>
                             <span class="nav-label">Dashboard</span>
                         </a>
                     </li>
-                    <li class="heading">FEATURES</li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-bookmark"></i>
-                            <span class="nav-label">Basic UI</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse">
-                            <li>
-                                <a href="colors.html">Colors</a>
-                            </li>
-                            <li>
-                                <a href="typography.html">Typography</a>
-                            </li>
-                            <li>
-                                <a href="panels.html">Panels</a>
-                            </li>
-                            <li>
-                                <a href="buttons.html">Buttons</a>
-                            </li>
-                            <li>
-                                <a href="tabs.html">Tabs</a>
-                            </li>
-                            <li>
-                                <a href="alerts_tooltips.html">Alerts &amp; Tooltips</a>
-                            </li>
-                            <li>
-                                <a href="badges_progress.html">Badges &amp; Progress</a>
-                            </li>
-                            <li>
-                                <a href="lists.html">List</a>
-                            </li>
-                            <li>
-                                <a href="cards.html">Card</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-edit"></i>
-                            <span class="nav-label">Forms</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse">
-                            <li>
-                                <a href="form_basic.html">Basic Forms</a>
-                            </li>
-                            <li>
-                                <a href="form_advanced.html">Advanced Plugins</a>
-                            </li>
-                            <li>
-                                <a href="form_masks.html">Form input masks</a>
-                            </li>
-                            <li>
-                                <a href="form_validation.html">Form Validation</a>
-                            </li>
-                            <li>
-                                <a href="text_editors.html">Text Editors</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="active">
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-table"></i>
-                            <span class="nav-label">Tables</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse in">
-                            <li>
-                                <a href="table_basic.html">Basic Tables</a>
-                            </li>
-                            <li>
-                                <a class="active" href="datatables.html">Datatables</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-bar-chart"></i>
-                            <span class="nav-label">Charts</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse">
-                            <li>
-                                <a href="charts_flot.html">Flot Charts</a>
-                            </li>
-                            <li>
-                                <a href="charts_morris.html">Morris Charts</a>
-                            </li>
-                            <li>
-                                <a href="chartjs.html">Chart.js</a>
-                            </li>
-                            <li>
-                                <a href="charts_sparkline.html">Sparkline Charts</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-map"></i>
-                            <span class="nav-label">Maps</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse">
-                            <li>
-                                <a href="maps_vector.html">Vector maps</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="icons.html">
-                            <i class="sidebar-item-icon fa fa-smile-o"></i>
-                            <span class="nav-label">Icons</span>
-                        </a>
-                    </li>
-                    <li class="heading">PAGES</li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-envelope"></i>
-                            <span class="nav-label">Mailbox</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse">
-                            <li>
-                                <a href="mailbox.html">Inbox</a>
-                            </li>
-                            <li>
-                                <a href="mail_view.html">Mail view</a>
-                            </li>
-                            <li>
-                                <a href="mail_compose.html">Compose mail</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="calendar.html">
-                            <i class="sidebar-item-icon fa fa-calendar"></i>
-                            <span class="nav-label">Calendar</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-file-text"></i>
-                            <span class="nav-label">Pages</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse">
-                            <li>
-                                <a href="invoice.html">Invoice</a>
-                            </li>
-                            <li>
-                                <a href="profile.html">Profile</a>
-                            </li>
-                            <li>
-                                <a href="login.html">Login</a>
-                            </li>
-                            <li>
-                                <a href="register.html">Register</a>
-                            </li>
-                            <li>
-                                <a href="lockscreen.html">Lockscreen</a>
-                            </li>
-                            <li>
-                                <a href="forgot_password.html">Forgot password</a>
-                            </li>
-                            <li>
-                                <a href="error_404.html">404 error</a>
-                            </li>
-                            <li>
-                                <a href="error_500.html">500 error</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="javascript:;">
-                            <i class="sidebar-item-icon fa fa-sitemap"></i>
-                            <span class="nav-label">Menu Levels</span><i class="fa fa-angle-left arrow"></i>
-                        </a>
-                        <ul class="nav-2-level collapse">
-                            <li>
-                                <a href="javascript:;">Level 2</a>
-                            </li>
-                            <li>
-                                <a href="javascript:;">
-                                    <span class="nav-label">Level 2</span><i class="fa fa-angle-left arrow"></i>
-                                </a>
-                                <ul class="nav-3-level collapse">
-                                    <li>
-                                        <a href="javascript:;">Level 3</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:;">Level 3</a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
+                    @if (level == "HR")
+                    {
+                        <li class="heading">FEATURES</li>
+                        <li class="active">
+                            <a href="javascript:;">
+                                <i class="sidebar-item-icon fa fa-table"></i>
+                                <span class="nav-label">Tables</span><i class="fa fa-angle-left arrow"></i>
+                            </a>
+                            <ul class="nav-2-level collapse in">
+                                <li>
+                                    <a href="/employees">Job Seeker Lits</a>
+                                </li>
+                                <li>
+                                    <a href="/managejoblist">Manage Job Lists</a>
+                                </li>
+                            </ul>
+                        </li>
+                    }
+
+
+                    @*<li class="heading">PAGES</li>*@
+
+                    @*<li>
+                <a href="~/html/dist/calendar.html">
+                    <i class="sidebar-item-icon fa fa-calendar"></i>
+                    <span class="nav-label">Calendar</span>
+                </a>
+            </li>*@
                 </ul>
             </div>
         </nav>
