--- a/WebClient/Views/Accounts/Verify.cshtml
+++ b/WebClient/Views/Accounts/Verify.cshtml
@@ -22,7 +22,7 @@
 <body class="bg-silver-300">
     <div class="content">
         <div class="brand">
-            <a class="link" href="index.html">AdminCAST</a>
+            <a class="link" href="index.html">Job Registration Submission</a>
         </div>
         <form id="login-form" action="javascript:;" method="post">
             <h2 class="login-title">Log in</h2>
