--- a/WebClient/Views/Employees/Index.cshtml
+++ b/WebClient/Views/Employees/Index.cshtml
@@ -8,12 +8,14 @@
 <div class="content-wrapper">
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <div class="modal-content" >
                 <div class="modal-header no-bd">
                     <h5 class="modal-title"><span class="fw-mediumbold">Job list</span></h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <div data-toggle="modal" data-target="#myModal" onclick="ClearScreen();">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                 </div>
                 <div class="modal-body">
                     <table class="table table-bordered table-striped">
