--- a/WebClient/Views/Joblists/ManageJoblist.cshtml
+++ b/WebClient/Views/Joblists/ManageJoblist.cshtml
@@ -43,7 +43,7 @@
         <h1 class="page-title">Manage Job List</h1>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="index.html"><i class="la la-home font-20"></i></a>
+                <a href="/"><i class="la la-home font-20"></i></a>
             </li>
         </ol>
         <div data-toggle="modal" data-target="#myModal" onclick="ClearScreen();">
