--- a/WebClient/Views/Dashboard/Profile.cshtml
+++ b/WebClient/Views/Dashboard/Profile.cshtml
@@ -18,7 +18,7 @@
                 <h1 class="page-title">Profile</h1>
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
-                        <a href="index.html"><i class="la la-home font-20"></i></a>
+                        <a href="/"><i class="la la-home font-20"></i></a>
                     </li>
                 </ol>
             </div>
@@ -39,7 +39,7 @@
                             </div>
                         </div>
                     </div>
-                    @if (@Context.Session.GetString("lvl") == "Jobseeker")
+                    @if (@Context.Session.GetString("lvl") == "JobSeeker")
                     {
                         <div class="col-lg-9 col-md-8">
                             <div class="ibox">
@@ -70,7 +70,7 @@
                                                     </div>
                                                     <div class="col-sm-6 form-group">
                                                         <label>Gender</label>
-                                                        <select class="form-control" id="Action" name="Action">
+                                                        <select class="form-control" id="Gender" name="Action">
                                                             <option value="">Select Option</option>
                                                             <option>Male</option>
                                                             <option>Female</option>
@@ -91,7 +91,7 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Marital Status</label>
-                                                    <select class="form-control" id="Action" name="Action">
+                                                    <select class="form-control" id="MaritalStatus" name="Action">
                                                         <option value="">Select Option</option>
                                                         <option>Single</option>
                                                         <option>Married</option>
