--- a/WebClient/Views/Layout/_layout.cshtml
+++ b/WebClient/Views/Layout/_layout.cshtml
@@ -103,7 +103,7 @@
                     @if(level == null)
                     {
                         <div class="admin-info">
-                            <div class="font-strong">GET</div><small>YOUR OPORTUNITIES</small>
+                            <div class="font-strong">WELCOME TO</div><small><small>Job Registration Submisson</small></small>
                         </div>
                     }
                     </div>
