--- a/WebClient/Views/Accounts/Register.cshtml
+++ b/WebClient/Views/Accounts/Register.cshtml
@@ -21,10 +21,16 @@
 </head>
 <body class="bg-silver-300">
     <div class="content">
-        <div class="brand">
-            <a class="link" href="/joblists">Job Registration Submissson</a>
-        </div>
+        <br />
+        <br />
+        <br />
+        @*<div class="brand">
+                <a class="link" href="/joblists">Job Registration Submissson</a>
+            </div>*@
         <form id="register-form" action="javascript:;" method="post">
+            <a href="/">
+                <h4 class="login-title"><b>JOB REGISTRATION SUBMISSON</b></h4>
+            </a>
             <h2 class="login-title">Sign Up</h2>
             <div class="row">
                 <div class="col-6">
@@ -79,6 +85,8 @@
     <script src="~/html/dist/assets//vendors/jquery-validation/dist/jquery.validate.min.js" type="text/javascript"></script>
     <!-- CORE SCRIPTS-->
     <script src="~/html/dist/assets//js/app.js" type="text/javascript"></script>
+    <script src="~/js/metisMenu.min.js"></script>
+    <script src="~/js/bootstrap-notify.min.js"></script>
     <!-- PAGE LEVEL SCRIPTS-->
     <script src="~/js/Script/Accounts.js"></script>
 </body>
