--- a/WebClient/Views/Dashboard/Profile.cshtml
+++ b/WebClient/Views/Dashboard/Profile.cshtml
@@ -59,10 +59,10 @@
                                                 <div class="form-group">
                                                     <input class="form-control" type="text" placeholder="id" id="Id" value="@Context.Session.GetString("id")" hidden>
                                                 </div>
-                                                <div class="form-group form-group-default">
+                                                @*<div class="form-group form-group-default">
                                                     <label>JobList</label>
                                                     <select class="form-control" id="JoblistOption" name="JoblistOption"></select>
-                                                </div>
+                                                </div>*@
                                                 <div class="row">
                                                     <div class="col-sm-6 form-group">
                                                         <label>Name</label>
