--- a/WebClient/Views/Employees/Approve.cshtml
+++ b/WebClient/Views/Employees/Approve.cshtml
@@ -1,9 +1,8 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Approve";
     Layout = "~/Views/Layout/_layout.cshtml";
 }
-
 
 <div class="content-wrapper">
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -83,11 +82,6 @@
                         </tbody>
                     </table>
                 </div>
-                <div class="modal-footer no-bd">
-                    @*<button type="button" id="add" class="btn btn-outline-success" data-dismiss="modal" onclick="Save();">Insert</button>*@
-                    <button type="button" id="approve" class="btn btn-outline-success" data-dismiss="modal" onclick="Approve()">Approve</button>
-                    <button type="button" id="reject" class="btn btn-outline-danger" data-dismiss="modal" onclick="Reject()">Reject</button>
-                </div>
             </div>
         </div>
     </div>
@@ -108,14 +102,13 @@
                     <div class="ibox-title">Data Table</div>
                 </div>*@
             <div class="ibox-body">
-                <a asp-action="Excel" class="btn btn-success pull-right hidden-sm-down fa fa-file-excel-o" data-toggle="tooltip" title="Export Excel"></a>
-                <a asp-action="ExportPdf" class="btn btn-danger pull-right hidden-sm-down fa fa-file-pdf-o" data-toggle="tooltip" title="Export Pdf"></a>
-                <table class="table table-striped table-bordered table-hover" id="Jobseeker" cellspacing="0" width="100%">
+                <table class="table table-striped table-bordered table-hover" id="GetApprove" cellspacing="0" width="100%">
                     <thead>
                         <tr>
                             <th>No</th>
                             <th>JobSeeker Name</th>
                             <th>Job Title</th>
+                            <th>Registered</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -132,5 +125,5 @@
 </div>
 
 @section Scripts{
-    <script src="~/js/Script/Employee.js"></script>
+    <script src="~/js/Script/Approve.js"></script>
 }
